fix word break in articles

--- a/style.css
+++ b/style.css
@@ -167,6 +167,8 @@ article {
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
+
+  word-break: break-word;
 }
 
 time {
@@ -289,6 +291,7 @@ form input[type=submit]:hover
   }
 
 }
+
 
 
 
